--- a/pack200-anttasks/pom.xml
+++ b/pack200-anttasks/pom.xml
@@ -45,6 +45,17 @@
     </dependency>
   </dependencies>
 
+  <build>
+  <plugins>
+        <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.5</source>
+          <target>1.5</target>
+        </configuration>
+      </plugin>
+  </plugins>
+  </build>
   <reporting>
     <plugins>
       <plugin>
