--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -152,7 +152,7 @@
       </activation>
       <dependencies>
         <dependency>
-          <groupId>org.codehaus.mojo</groupId>
+          <groupId>org.telscenter.maven-plugins</groupId>
           <artifactId>pack200-jdk15</artifactId>
           <version>${version}</version>
         </dependency>
