Updated eclipse project to use the new m2eclipse format.
git-svn-id: https://svn.code.sf.net/p/tels/code/trunk/maven-plugins/webstart-maven-plugin@3006 e004626d-f90d-0410-840a-8a47d1743edb

--- a/.settings/org.eclipse.jdt.core.prefs
+++ b/.settings/org.eclipse.jdt.core.prefs
@@ -1,4 +1,4 @@
-#Mon Aug 21 17:22:11 GMT 2006
+#Tue Oct 21 14:46:51 EDT 2008
 eclipse.preferences.version=1
 org.eclipse.jdt.core.builder.cleanOutputFolder=clean
 org.eclipse.jdt.core.builder.duplicateResourceTask=warning
