--- a/.classpath
+++ b/.classpath
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="plugin/src/main/java"/>
-	<classpathentry kind="src" path="plugin/src/test/java"/>
-	<classpathentry excluding="**" output="plugin/src/main/resources" kind="src" path="plugin/src/main/resources"/>
-	<classpathentry excluding="**" output="plugin/src/test/resources" kind="src" path="plugin/src/test/resources"/>
-	<classpathentry kind="src" path="pack200-jdk15/src/main/java"/>
-	<classpathentry kind="src" path="pack200-anttasks/src/main/java"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
-		<accessrules>
-			<accessrule kind="accessible" pattern="com/sun/tools/apache/**"/>
-		</accessrules>
-	</classpathentry>
+	<classpathentry kind="src" output="pack200-anttasks/target/classes" path="pack200-anttasks/src/main/java"/>
+	<classpathentry excluding="**" kind="src" output="pack200-anttasks/target/classes" path="pack200-anttasks/src/main/resources"/>
+	<classpathentry kind="src" output="pack200-jdk15/target/classes" path="pack200-jdk15/src/main/java"/>
+	<classpathentry kind="src" output="plugin/target/classes" path="plugin/src/main/java"/>
+	<classpathentry kind="src" output="plugin/target/test-classes" path="plugin/src/test/java"/>
+	<classpathentry excluding="**" kind="src" output="plugin/target/classes" path="plugin/src/main/resources"/>
+	<classpathentry excluding="**" kind="src" output="plugin/target/test-classes" path="plugin/src/test/resources"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="con" path="org.maven.ide.eclipse.MAVEN2_CLASSPATH_CONTAINER"/>
-	<classpathentry kind="lib" path="pack200-anttasks/src/main/resources"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
