--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -94,9 +94,9 @@
     	<groupId>org.apache.maven.plugins</groupId>    	
      -->
     <dependency>
-      <groupId>org.telscenter.maven-plugins</groupId>
+      <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-jar-plugin</artifactId>
-      <version>2.1-SNAPSHOT</version>
+      <version>2.2</version>
     </dependency>
     <dependency>
       <groupId>org.codehaus.mojo</groupId>
