--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -92,7 +92,7 @@
     <dependency>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-jar-plugin</artifactId>
-      <version>2.2</version>
+      <version>2.2b</version>
     </dependency>
     <dependency>
       <groupId>org.codehaus.mojo</groupId>
