--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -75,8 +75,8 @@
     </dependency>
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
-      <artifactId>plexus-utils</artifactId>
-      <version>1.0.4</version>
+      <artifactId>plexus-archiver</artifactId>
+      <version>1.2</version>
     </dependency>
     <dependency>
       <groupId>commons-lang</groupId>
@@ -119,6 +119,11 @@
       <artifactId>maven-reporting-impl</artifactId>
       <version>2.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.telscenter.maven-plugins</groupId>
+      <artifactId>pack200-jdk15</artifactId>
+      <version>1.0-alpha-1-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 
   <!-- only needed because missing from the root pom.xml and we want the latest jar plugin -->
@@ -139,52 +144,6 @@
     </repository>
     -->
   </repositories>
-
-  <profiles>
-    <profile>
-      <id>jdk16</id>
-      <activation>
-        <jdk>1.6</jdk>
-      </activation>
-      <dependencies>
-        <dependency>
-          <groupId>org.telscenter.maven-plugins</groupId>
-          <artifactId>pack200-jdk15</artifactId>
-          <version>${version}</version>
-        </dependency>
-      </dependencies>
-    </profile>
-    <profile>
-      <id>jdk15</id>
-      <activation>
-        <jdk>1.5</jdk>
-      </activation>
-      <dependencies>
-        <dependency>
-          <groupId>org.telscenter.maven-plugins</groupId>
-          <artifactId>pack200-jdk15</artifactId>
-          <version>${version}</version>
-        </dependency>
-        
-      </dependencies>
-    </profile>
-    <profile>
-      <id>jdk14</id>
-      <activation>
-        <jdk>1.4</jdk>
-      </activation>
-      <dependencies>
-      <!--
-        <dependency>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>pack200-jdk14</artifactId>
-          <version>1.0-alpha-1-SNAPSHOT</version>
-        </dependency>
-        
-        -->
-      </dependencies>
-    </profile>
-  </profiles>
 
     <reporting>
       <plugins>
